# SkinCancerCapstone

./: .gitattributes  .gitignore  07-neural-nets-test.ipynb  07-neural-nets-train.ipynb  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
kaggle_nb/: skincancerresnet.ipynb
keras/: convert-saved-model.py
keras/models/: ConvertToKerasFromH5.ipynb
keras/skin_cancer_model-new_savedmodel/: fingerprint.pb  saved_model.pb
keras/skin_cancer_model-new_savedmodel/variables/: variables.index
lambdaAWS/: dockerfile  lambda_function.py  requirements.txt  test.py
model-conversion/: dockerfile  h5converter.py  readme.md
model-conversion/to_Onnx/: Dockerfile.keras-onnx  convert_keras_to_onnx.py  readme.md
onnx/: dockerfile  lambda_function.ipynb  test.py
tfserving/: 09-image-preparation.ipynb  docker_script_tfserving.txt  dockerfile  notes.txt  pyproject.toml  readme.md  test.py  tfServing.ipynb
tfserving/skin-cancer-saved-model/: fingerprint.pb  saved_model.pb
tfserving/skin-cancer-saved-model/variables/: variables.index
