[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=1.23.5,<2.0.0",  # Changed for TensorFlow compatibility
    "pandas>=2.2.0",  # Adjusted for numpy 1.x
    "scikit-learn>=1.5.0",  # Adjusted for numpy 1.x
    "tensorflow==2.15.0",
    "matplotlib>=3.8.0",
    "ipykernel>=6.29.0",
    "protobuf==4.25.3",
    "h5py>=3.9.0",
]
