[project]
name = "skin-cancer-classifier"
version = "0.1.0"
description = "Skin cancer classification API using FastAPI and ONNX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "onnxruntime>=1.20.1",
    "keras-image-helper>=0.0.1",
    "numpy>=2.2.1",
]